[package]
name = "azusa"
description = "Minimal Pomodoro Utility"
version = "0.1.0"
edition = "2021"

[dependencies]
simple_config_parser = "1.0.0"
fltk = "1.3.15"
also = "0.1.0"
play = "0.5.3"
core-foundation = "0.9.3"
dirs = "4.0.0"

[package.metadata.bundle]
name = "Azusa"
identifier = "net.hannesbraun.azusa"
copyright = "Copyright (c) 2022, Hannes Braun"
icon = ["icon/*.png"]
resources = ["alert.mp3"]
